tests/elab_fail/structInstError.lean.out.expected
structInstError.lean:5:7-5:29: error: invalid {...} notation, expected type is not known
{ x := 10, b := true } : Foo
